[tool.poetry]
name = "load-balancer-ssl-operator"
version = "0.1.0"
description = "A kubernetes operator to dynamically apply ssl certificates to cloud load balancers"
authors = ["Jose Rojas <39174181+jarojasm95@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
kopf = "^1.32.1"
pydantic = "^1.8.2"
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flakehell = "^0.9.0"
flake8 = "^3.9.2"
flake8-black = "^0.2.3"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.5.0"
flake8-isort = "^4.0.0"
flake8-mutable = "^1.2.0"
flake8-print = "^4.0.0"
isort = "^5.9.2"
pytest = "^6.2.4"
pytest-asyncio = "^0.16.0"
pytest-cov = "^3.0.0"
pytest-html = "^3.1.1"
pytest-mock = "^3.6.1"
coverage = "^6.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flakehell]
# make output nice
format = "colored"
# show line of source code in output
show_source = true
max_line_length = 100
extended_default_ignore = []  # https://github.com/flakehell/flakehell/issues/10

[tool.flakehell.plugins]
flake8-black = ["+*"]
flake8-builtins = ["+*"]
flake8-comprehensions = ["+*", "-C408"]
flake8-isort = ["+*"]
flake8-mutable = ["+*"]
flake8-print = ["+*"]
mccabe = ["+*"]
pycodestyle = [
    "+*",
    "-W503"  # black compat: line break before binary operator
]
pyflakes = ["+*"]
pylint = ["+*"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
line_length = 100
multi_line_output = 3  # Matches black formatting
use_parentheses = true
include_trailing_comma = true
force_grid_wrap = 0
ensure_newline_before_comments = true

[tool.pytest.ini_options]
junit_suite_name = "load-balancer-ssl-operator"
junit_family = "xunit2"
addopts = """
    --cov=project \
    --cov-report=html:tests/coverage \
    --cov-report=term \
    --cov-report=xml:tests/coverage/cov.xml \
    --html=tests/results/index.html \
    --junitxml=tests/results/summary.xml
"""

[tool.coverage.run]
omit = ["tests"]
